--- a/resources/style.css
+++ b/resources/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-size: 400;
+  background-color: beige;
 }
 
 main {
@@ -16,26 +17,50 @@ main {
   padding: 1rem;
 }
 
+button,
+select,
+option {
+  cursor: pointer;
+}
+
+.main-wrapper {
+  background-color: white;
+  padding: 1rem;
+}
+
 .options {
   display: flex;
   justify-content: center;
   padding: 0.5rem 0;
 }
 
-.options label {
-  padding-right: 0.1rem;
+.color-option {
+  display: flex;
+  align-items: center;
 }
 
+.color-option label {
+  padding-right: 0.2rem;
+}
+
+.color-option select,
+.eraser-btn button,
+.clear-btn button {
+  padding: 0.2rem 0.3rem;
+  border-radius: 0.5rem;
+}
+
+.eraser-btn,
 .clear-btn {
   padding-left: 0.5rem;
 }
 
-.clear-btn button {
-  padding: 0 0.2rem;
-}
-
 .container-wrapper {
   padding: 1rem 0;
+}
+
+.container-inner {
+  border: 2px solid black;
 }
 
 .container {
@@ -43,8 +68,7 @@ main {
   display: grid;
   width: 35rem;
   height: 35rem;
-  gap: 0.5rem;
-  background-color: beige;
+  gap: 0.1rem;
 }
 
 .slider-wrapper {
